--- a/wiki/Goals.wiki
+++ b/wiki/Goals.wiki
@@ -11,4 +11,4 @@ _Cjklib_ was started as to increase the support for languages with Chinese chara
   * *Everything under one hood*: for all methods, languages (and writing systems) supported are provided together under one hood, being as independant as possible from the particular language, but without losing the flexibility of the aspects covered.
   * *High quality and transparancy*: projects depending on _cjklib_ should be able to build and trust on the services provided. Throughout the library implementation and data sources are backed up by linguistic literature and implementational shortcomings are to be marked as such.
   * *Easy yet powerful*: _cjklib_ tries to be as easy as possible allowing for simple integration and quick results while providing all the necessary functionality and possibilies needed.
-  * *Exact*: methods to be implemented should give one definitive answer for each request - tasks with fuzzy knowledge highly depend on the use case and are thus left to the user.
+  * *Exact*: language quite often becomes vague and fuzzy. Methods to be implemented though should give one definitive answer for each request - tasks with fuzzy knowledge highly depend on the use case and are thus left to the user.
