--- a/wiki/Todo.wiki
+++ b/wiki/Todo.wiki
@@ -14,6 +14,7 @@ The [http://www.stud.uni-karlsruhe.de/~uyhc/api/index.html API] already includes
     A rather tedious bit of work includes creating entries for the stroke order of characters in naming the strokes found in particular in each character. This list is combined with the character decomposition and thus far fewer characters actually need an entry. In return more acurate stroke count entries can be generated.
   * Mapping to glyph images:
     Both stroke order and character decomposition should be mapped to actual graphical representations so that a reference is given for all entries. Sources for reference also need to be discussed.
+    * [http://unicode.org/reports/tr37/ Ideographic Variation Database]
   * Mapping to locales:
     Each character can have a distinct glyph mapped to one of the locales (traditional, Chinese simplified, Japanese simplified, Korean and Vietnamese). This should be done given a valid source.
   * Readings:
