--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -51,5 +51,5 @@ sudo aptitude install python-cjklib
 == Debian ==
 Download the .deb from [http://code.google.com/p/cjklib/downloads/list Downloads] and run
 {{{
-dpkg -i python-cjklib_0.2-1_all.deb
+dpkg -i python-cjklib_0.2~unstable-1_all.deb
 }}}
