--- a/wiki/Decomposition.wiki
+++ b/wiki/Decomposition.wiki
@@ -9,7 +9,7 @@ It is obvious that decomposition data should be valid and complete, but it is di
 
 This page shall offer questions and hints to help realize what decomposition needs to achieve. Log in and help contribute to guidelines! It's ok, if you don't keep it as clean as it is now :)
 
-= Details =
+= Questions & Issues =
 
 Where is character decomposition needed?
   * Lookup, aka. multi-radical search ([http://jisho.org/kanji/radicals/ example])
@@ -26,4 +26,14 @@ What else needs to be considered?
   * Can non-Han characters serve as components? If not, why?
   * Are in-frequent characters outside the [http://en.wikipedia.org/wiki/Basic_Multilingual_Plane#Basic_Multilingual_Plane BMP] useful?
   * What to do with frequent components that didn't get encoded with Unicode?
+  * Should components be mapped to a similar character or the ethymological character with a different visual representation if no exact character exists?
   * What about component structures not recognized by Unicode (IDS), e.g. 众?
+
+= Current Organisation =
+
+== Glyphs ==
+Currently every character can have as many decompositions as possible. Actually each character can have as many glyphs as possible of which each locale has one set as default and each glyph can have as many decompositions as possible. Each needs to result in the same stroke order for every glyph.
+
+Each glyph is a particular graphical representation, of which most characters luckily should have only few if not just one.
+
+As components have glyphs again each decomposition matches to a character's glyph, not the character itself. This is important as character can change appearance, e.g. ⾷ will have a dot as last stroke if used as radical on the left side, not a right falling one. In the latter case a decomposition can look like {{{"枚","⿰木[1]攵",0,1,O}}}. The first component 木 "tree" is mapped to the glyph no. 1 (2nd glyph), which then should have a dot as last character in the StrokeOrder mapping.
