--- a/wiki/Decomposition.wiki
+++ b/wiki/Decomposition.wiki
@@ -25,6 +25,7 @@ What kind of different decomposition can exist?
 What else needs to be considered?
   * Are there different grades in decomposition? People might disagree on what is a component and this disagreement can possibly be expressed in a degree of validity. Some might argue components need to be separated by a "void", as to clearly cut through a character. For them 龙 might not be expressed as ⿻尤？ (the question mark denoting a missing character to express that component). A degree might express how well a decomposition seems fitting: 1=can be cut through into two clear components, 2=overlap, but both character exist in their own right, 3=one component clearly is a character.
   * Can non-Han characters serve as components? If not, why?
+  * What code point to use for "characters" that got encoded in different places, e.g. radical form vs. unified character
   * Are in-frequent characters outside the [http://en.wikipedia.org/wiki/Basic_Multilingual_Plane#Basic_Multilingual_Plane BMP] useful?
   * What to do with frequent components that didn't get encoded with Unicode?
   * Should components be mapped to a similar character or the ethymological character with a different visual representation if no exact character exists?
